# fastapi-pet

./: .gitignore  crud.py  items_views.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_05_15_1443-168b8a7d8591_create_products_table.py  2025_05_15_1456-957ca158f099_create_users_table.py  2025_05_15_1505-013449b20fa4_created_posts_table.py  2025_05_15_1545-2865749b256b_created_profile_table.py  2025_05_16_0953-e2b3d7de2783_created_orders_table.py  2025_05_16_1021-28f26e8624da_created_order_product_association_table.py  2025_05_16_1149-825bdb165ec0_added_count_column_to_order_product_.py  2025_05_16_1225-efd25b422f5a_added_unit_price_column_to_order_.py  2025_05_26_1905-5c980b266da8_added_password_field_to_user_model.py  2025_05_26_1921-f16fc4203ed4_added_securityuser_model.py
api_v1/: __init__.py
api_v1/demo_auth/: crud.py  demo_jwt_auth.py  helpers.py  schemas.py  validation.py  views.py
api_v1/products/: dependecies.py  schemas.py  views.py
auth/: utils.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: schemas.py  views.py
